parser/machine.c

#line 1 "parser/machine.rl"
// compile-command: "ragel -Z -G2 machine.rl"

/* C port of the Ragel lexer (ported from legacy Go). This file is pure C and
   uses the helpers declared in parser/lexer.h. */

#include <stdlib.h>
#include <string.h>
#include "lexer.h"
#include "tokens.h"

#define maxstack 64


#line 102 "parser/machine.rl"



#line 16 "parser/machine.c"
static const int expr_start = 22;
static const int expr_first_final = 22;
static const int expr_error = 0;

static const int expr_en_qstring = 79;
static const int expr_en_istring = 82;
static const int expr_en_expr = 22;


#line 105 "parser/machine.rl"

/* C lexical wrapper generated by Ragel */

int lexData(const char *data, int len, LexResult *r) {
    int cs = 0, act = 0;
    const char *p = data;
    const char *pe = data + len;
    const char *eof = pe;
    const char *ts = NULL, *te = NULL;
    int top = 0;
    int stack[maxstack];
    Backrefs backrefs = { NULL, 0, 0 };

    /* helper to set an error message (allocated) */
    void set_err(const char *msg) {
        if (r->errmsg) { free(r->errmsg); r->errmsg = NULL; }
        size_t m = strlen(msg) + 1;
        r->errmsg = malloc(m);
        if (r->errmsg) memcpy(r->errmsg, msg, m);
    }

    /* nostack check used by actions; returns 1 on error (and sets r->errmsg) */
    #define nostack() ( (top) >= maxstack ? (set_err("exceeds recursion limit"), 1) : 0 )

    /* append or set r->data */
    if (r->data == NULL) {
        r->data = malloc(len);
        if (!r->data) { set_err("out of memory"); return 1; }
        memcpy(r->data, data, len);
        r->len = len;
    } else {
        char *nd = realloc(r->data, r->len + len);
        if (!nd) { set_err("out of memory"); return 1; }
        r->data = nd;
        memcpy(r->data + r->len, data, len);
        r->len += len;
    }


#line 62 "parser/machine.c"
	{
	cs = expr_start;
	top = 0;
	ts = 0;
	te = 0;
	act = 0;
	}

#line 144 "parser/machine.rl"
    (void)expr_first_final; (void)expr_error; (void)expr_en_qstring; (void)expr_en_istring; (void)expr_en_expr;

    /* Ragel exec block will use the macros (tok, tokenter, tokleave, tokarg, add_lines, add_line)
       declared in parser/lexer.h and expect local variables ts, te, top, backrefs, data, p, pe, cs. */



#line 75 "parser/machine.c"
	{
	if ( p == pe )
		goto _test_eof;
	goto _resume;

_again:
	switch ( cs ) {
		case 22: goto st22;
		case 23: goto st23;
		case 1: goto st1;
		case 24: goto st24;
		case 2: goto st2;
		case 3: goto st3;
		case 25: goto st25;
		case 26: goto st26;
		case 27: goto st27;
		case 28: goto st28;
		case 29: goto st29;
		case 30: goto st30;
		case 31: goto st31;
		case 32: goto st32;
		case 33: goto st33;
		case 4: goto st4;
		case 5: goto st5;
		case 34: goto st34;
		case 35: goto st35;
		case 36: goto st36;
		case 37: goto st37;
		case 6: goto st6;
		case 38: goto st38;
		case 7: goto st7;
		case 8: goto st8;
		case 39: goto st39;
		case 40: goto st40;
		case 9: goto st9;
		case 10: goto st10;
		case 41: goto st41;
		case 42: goto st42;
		case 43: goto st43;
		case 44: goto st44;
		case 45: goto st45;
		case 11: goto st11;
		case 12: goto st12;
		case 46: goto st46;
		case 47: goto st47;
		case 48: goto st48;
		case 13: goto st13;
		case 14: goto st14;
		case 49: goto st49;
		case 50: goto st50;
		case 51: goto st51;
		case 52: goto st52;
		case 53: goto st53;
		case 54: goto st54;
		case 55: goto st55;
		case 56: goto st56;
		case 57: goto st57;
		case 58: goto st58;
		case 59: goto st59;
		case 60: goto st60;
		case 61: goto st61;
		case 62: goto st62;
		case 63: goto st63;
		case 64: goto st64;
		case 65: goto st65;
		case 66: goto st66;
		case 67: goto st67;
		case 68: goto st68;
		case 69: goto st69;
		case 70: goto st70;
		case 71: goto st71;
		case 72: goto st72;
		case 73: goto st73;
		case 74: goto st74;
		case 75: goto st75;
		case 76: goto st76;
		case 15: goto st15;
		case 77: goto st77;
		case 78: goto st78;
		case 79: goto st79;
		case 80: goto st80;
		case 16: goto st16;
		case 17: goto st17;
		case 81: goto st81;
		case 82: goto st82;
		case 83: goto st83;
		case 18: goto st18;
		case 19: goto st19;
		case 20: goto st20;
		case 21: goto st21;
		case 84: goto st84;
		case 85: goto st85;
		case 86: goto st86;
		case 0: goto st0;
	default: break;
	}

	if ( ++p == pe )
		goto _test_eof;
_resume:
	switch ( cs )
	{
tr0:
#line 98 "parser/machine.rl"
	{{p = ((te))-1;}{ tok((int)(*ts), r); }}
	goto st22;
tr2:
#line 72 "parser/machine.rl"
	{{p = ((te))-1;}{ tok(FLOAT, r); }}
	goto st22;
tr5:
#line 1 "NONE"
	{	switch( act ) {
	case 9:
	{{p = ((te))-1;} tok(ASSERT_, r); }
	break;
	case 10:
	{{p = ((te))-1;} tok(ELSE_, r); }
	break;
	case 11:
	{{p = ((te))-1;} tok(IF_, r); }
	break;
	case 12:
	{{p = ((te))-1;} tok(IN, r); }
	break;
	case 13:
	{{p = ((te))-1;} tok(INHERIT, r); }
	break;
	case 14:
	{{p = ((te))-1;} tok(LET, r); }
	break;
	case 15:
	{{p = ((te))-1;} tok(OR_, r); }
	break;
	case 16:
	{{p = ((te))-1;} tok(REC, r); }
	break;
	case 17:
	{{p = ((te))-1;} tok(THEN, r); }
	break;
	case 18:
	{{p = ((te))-1;} tok(WITH, r); }
	break;
	case 27:
	{{p = ((te))-1;} tok(FLOAT, r); }
	break;
	case 28:
	{{p = ((te))-1;} tok(INT_, r); }
	break;
	case 29:
	{{p = ((te))-1;} tok(ID, r); }
	break;
	case 30:
	{{p = ((te))-1;} tok(ELLIPSIS, r); }
	break;
	case 39:
	{{p = ((te))-1;} tok(CONCAT, r); }
	break;
	case 48:
	{{p = ((te))-1;} tok((int)(*ts), r); }
	break;
	}
	}
	goto st22;
tr14:
#line 67 "parser/machine.rl"
	{te = p+1;{ tokcomment(COMMENT, r); add_lines(r, ts, te); }}
	goto st22;
tr17:
#line 71 "parser/machine.rl"
	{te = p+1;{ tok(PATH, r); }}
	goto st22;
tr30:
#line 98 "parser/machine.rl"
	{te = p+1;{ tok((int)(*ts), r); }}
	goto st22;
tr33:
#line 65 "parser/machine.rl"
	{te = p+1;{ add_line(r, ts); }}
	goto st22;
tr35:
#line 87 "parser/machine.rl"
	{te = p+1;{ tokenter('"', '"', r); { /* replaced nostack-return to return non-zero error */ {stack[top++] = 22;goto st79;}} }}
	goto st22;
tr40:
#line 91 "parser/machine.rl"
	{te = p+1;{ tokenter('(', ')', r); { /* replaced nostack-return to return non-zero error */ {stack[top++] = 22;goto st22;}} }}
	goto st22;
tr41:
#line 94 "parser/machine.rl"
	{te = p+1;{ if (!tokleave((int)(*ts), r)) return 1; {cs = stack[--top];goto _again;} }}
	goto st22;
tr48:
#line 96 "parser/machine.rl"
	{te = p+1;{ if (!tokarg(r)) return 1; }}
	goto st22;
tr53:
#line 92 "parser/machine.rl"
	{te = p+1;{ tokenter('[', ']', r); { /* replaced nostack-return to return non-zero error */ {stack[top++] = 22;goto st22;}} }}
	goto st22;
tr63:
#line 93 "parser/machine.rl"
	{te = p+1;{ tokenter('{', '}', r); { /* replaced nostack-return to return non-zero error */ {stack[top++] = 22;goto st22;}} }}
	goto st22;
tr66:
#line 98 "parser/machine.rl"
	{te = p;p--;{ tok((int)(*ts), r); }}
	goto st22;
tr68:
#line 72 "parser/machine.rl"
	{te = p;p--;{ tok(FLOAT, r); }}
	goto st22;
tr70:
#line 64 "parser/machine.rl"
	{te = p;p--;}
	goto st22;
tr71:
#line 81 "parser/machine.rl"
	{te = p+1;{ tok(NEQ, r); }}
	goto st22;
tr72:
#line 66 "parser/machine.rl"
	{te = p;p--;{ tokcomment(COMMENT, r); }}
	goto st22;
tr73:
#line 90 "parser/machine.rl"
	{te = p+1;{ tokenter(INTERP, '}', r); { /* replaced nostack-return to return non-zero error */ {stack[top++] = 22;goto st22;}} }}
	goto st22;
tr74:
#line 79 "parser/machine.rl"
	{te = p+1;{ tok(AND, r); }}
	goto st22;
tr75:
#line 88 "parser/machine.rl"
	{te = p+1;{ tokenter(II, II, r); { /* replaced nostack-return to return non-zero error */ {stack[top++] = 22;goto st82;}}  }}
	goto st22;
tr77:
#line 69 "parser/machine.rl"
	{te = p;p--;{ tok(PATH, r); }}
	goto st22;
tr79:
#line 77 "parser/machine.rl"
	{te = p+1;{ tok(IMPL, r); }}
	goto st22;
tr83:
#line 84 "parser/machine.rl"
	{te = p+1;{ tok(UPDATE, r); }}
	goto st22;
tr84:
#line 73 "parser/machine.rl"
	{te = p;p--;{ tok(INT_, r); }}
	goto st22;
tr86:
#line 74 "parser/machine.rl"
	{te = p;p--;{ tok(ID, r); }}
	goto st22;
tr87:
#line 82 "parser/machine.rl"
	{te = p+1;{ tok(LEQ, r); }}
	goto st22;
tr88:
#line 80 "parser/machine.rl"
	{te = p+1;{ tok(EQ, r); }}
	goto st22;
tr89:
#line 83 "parser/machine.rl"
	{te = p+1;{ tok(GEQ, r); }}
	goto st22;
tr90:
#line 68 "parser/machine.rl"
	{te = p;p--;{ tok(URI, r); }}
	goto st22;
tr101:
#line 56 "parser/machine.rl"
	{te = p;p--;{ tok(IN, r); }}
	goto st22;
tr118:
#line 78 "parser/machine.rl"
	{te = p+1;{ tok(OR, r); }}
	goto st22;
tr120:
#line 70 "parser/machine.rl"
	{te = p;p--;{ tok(PATH, r); }}
	goto st22;
st22:
#line 1 "NONE"
	{ts = 0;}
	if ( ++p == pe )
		goto _test_eof22;
case 22:
#line 1 "NONE"
	{ts = p;}
#line 332 "parser/machine.c"
	switch( (*p) ) {
		case 0: goto tr31;
		case 9: goto st26;
		case 10: goto tr33;
		case 13: goto st26;
		case 32: goto st26;
		case 33: goto st27;
		case 34: goto tr35;
		case 35: goto st28;
		case 36: goto st29;
		case 38: goto st30;
		case 39: goto st31;
		case 40: goto tr40;
		case 41: goto tr41;
		case 43: goto tr42;
		case 45: goto tr43;
		case 46: goto tr44;
		case 47: goto tr45;
		case 48: goto tr46;
		case 58: goto tr48;
		case 60: goto tr49;
		case 61: goto st46;
		case 62: goto st47;
		case 64: goto tr48;
		case 91: goto tr53;
		case 93: goto tr41;
		case 95: goto tr54;
		case 97: goto tr55;
		case 101: goto tr56;
		case 105: goto tr57;
		case 108: goto tr58;
		case 111: goto tr59;
		case 114: goto tr60;
		case 116: goto tr61;
		case 119: goto tr62;
		case 123: goto tr63;
		case 124: goto st75;
		case 125: goto tr41;
		case 126: goto tr65;
	}
	if ( (*p) < 65 ) {
		if ( 49 <= (*p) && (*p) <= 57 )
			goto tr47;
	} else if ( (*p) > 90 ) {
		if ( 98 <= (*p) && (*p) <= 122 )
			goto tr52;
	} else
		goto tr52;
	goto tr30;
tr31:
#line 1 "NONE"
	{te = p+1;}
	goto st23;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
#line 388 "parser/machine.c"
	if ( (*p) == 46 )
		goto st1;
	goto tr66;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr1;
	goto tr0;
tr1:
#line 1 "NONE"
	{te = p+1;}
	goto st24;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
#line 405 "parser/machine.c"
	switch( (*p) ) {
		case 69: goto st2;
		case 101: goto st2;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr1;
	goto tr68;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	switch( (*p) ) {
		case 43: goto st3;
		case 45: goto st3;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st25;
	goto tr2;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st25;
	goto tr2;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st25;
	goto tr68;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	switch( (*p) ) {
		case 9: goto st26;
		case 13: goto st26;
		case 32: goto st26;
	}
	goto tr70;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	if ( (*p) == 61 )
		goto tr71;
	goto tr66;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	switch( (*p) ) {
		case 10: goto tr72;
		case 13: goto tr72;
	}
	goto st28;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	if ( (*p) == 123 )
		goto tr73;
	goto tr66;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	if ( (*p) == 38 )
		goto tr74;
	goto tr66;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
	if ( (*p) == 39 )
		goto tr75;
	goto tr66;
tr42:
#line 1 "NONE"
	{te = p+1;}
#line 98 "parser/machine.rl"
	{act = 48;}
	goto st32;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
#line 492 "parser/machine.c"
	switch( (*p) ) {
		case 43: goto tr76;
		case 47: goto st5;
		case 95: goto st4;
	}
	if ( (*p) < 65 ) {
		if ( 45 <= (*p) && (*p) <= 57 )
			goto st4;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st4;
	} else
		goto st4;
	goto tr66;
tr9:
#line 1 "NONE"
	{te = p+1;}
#line 76 "parser/machine.rl"
	{act = 30;}
	goto st33;
tr76:
#line 1 "NONE"
	{te = p+1;}
#line 85 "parser/machine.rl"
	{act = 39;}
	goto st33;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
#line 518 "parser/machine.c"
	switch( (*p) ) {
		case 43: goto st4;
		case 47: goto st5;
		case 95: goto st4;
	}
	if ( (*p) < 65 ) {
		if ( 45 <= (*p) && (*p) <= 57 )
			goto st4;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st4;
	} else
		goto st4;
	goto tr5;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	switch( (*p) ) {
		case 43: goto st4;
		case 47: goto st5;
		case 95: goto st4;
	}
	if ( (*p) < 65 ) {
		if ( 45 <= (*p) && (*p) <= 57 )
			goto st4;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st4;
	} else
		goto st4;
	goto tr5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	switch( (*p) ) {
		case 43: goto st34;
		case 95: goto st34;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st34;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st34;
		} else if ( (*p) >= 65 )
			goto st34;
	} else
		goto st34;
	goto tr5;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
	switch( (*p) ) {
		case 43: goto st34;
		case 47: goto st35;
		case 95: goto st34;
	}
	if ( (*p) < 65 ) {
		if ( 45 <= (*p) && (*p) <= 57 )
			goto st34;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st34;
	} else
		goto st34;
	goto tr77;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
	switch( (*p) ) {
		case 43: goto st34;
		case 95: goto st34;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st34;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st34;
		} else if ( (*p) >= 65 )
			goto st34;
	} else
		goto st34;
	goto tr77;
tr43:
#line 1 "NONE"
	{te = p+1;}
#line 98 "parser/machine.rl"
	{act = 48;}
	goto st36;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
#line 616 "parser/machine.c"
	switch( (*p) ) {
		case 43: goto st4;
		case 47: goto st5;
		case 62: goto tr79;
		case 95: goto st4;
	}
	if ( (*p) < 65 ) {
		if ( 45 <= (*p) && (*p) <= 57 )
			goto st4;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st4;
	} else
		goto st4;
	goto tr66;
tr44:
#line 1 "NONE"
	{te = p+1;}
#line 98 "parser/machine.rl"
	{act = 48;}
	goto st37;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
#line 639 "parser/machine.c"
	switch( (*p) ) {
		case 43: goto st4;
		case 45: goto st4;
		case 46: goto st6;
		case 47: goto st5;
		case 95: goto st4;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr81;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st4;
	} else
		goto st4;
	goto tr66;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	switch( (*p) ) {
		case 43: goto st4;
		case 46: goto tr9;
		case 47: goto st5;
		case 95: goto st4;
	}
	if ( (*p) < 65 ) {
		if ( 45 <= (*p) && (*p) <= 57 )
			goto st4;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st4;
	} else
		goto st4;
	goto tr0;
tr81:
#line 1 "NONE"
	{te = p+1;}
#line 72 "parser/machine.rl"
	{act = 27;}
	goto st38;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
#line 682 "parser/machine.c"
	switch( (*p) ) {
		case 43: goto st4;
		case 47: goto st5;
		case 69: goto st7;
		case 95: goto st4;
		case 101: goto st7;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st4;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st4;
		} else if ( (*p) >= 65 )
			goto st4;
	} else
		goto tr81;
	goto tr68;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	switch( (*p) ) {
		case 43: goto st8;
		case 45: goto st8;
		case 46: goto st4;
		case 47: goto st5;
		case 95: goto st4;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr11;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st4;
	} else
		goto st4;
	goto tr2;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	switch( (*p) ) {
		case 43: goto st4;
		case 47: goto st5;
		case 95: goto st4;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st4;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st4;
		} else if ( (*p) >= 65 )
			goto st4;
	} else
		goto tr11;
	goto tr2;
tr11:
#line 1 "NONE"
	{te = p+1;}
#line 72 "parser/machine.rl"
	{act = 27;}
	goto st39;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
#line 750 "parser/machine.c"
	switch( (*p) ) {
		case 43: goto st4;
		case 47: goto st5;
		case 95: goto st4;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st4;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st4;
		} else if ( (*p) >= 65 )
			goto st4;
	} else
		goto tr11;
	goto tr68;
tr45:
#line 1 "NONE"
	{te = p+1;}
	goto st40;
st40:
	if ( ++p == pe )
		goto _test_eof40;
case 40:
#line 774 "parser/machine.c"
	switch( (*p) ) {
		case 42: goto st9;
		case 43: goto st34;
		case 47: goto tr83;
		case 95: goto st34;
	}
	if ( (*p) < 65 ) {
		if ( 45 <= (*p) && (*p) <= 57 )
			goto st34;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st34;
	} else
		goto st34;
	goto tr66;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) == 42 )
		goto st10;
	goto st9;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	switch( (*p) ) {
		case 42: goto st10;
		case 47: goto tr14;
	}
	goto st9;
tr46:
#line 1 "NONE"
	{te = p+1;}
#line 73 "parser/machine.rl"
	{act = 28;}
	goto st41;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
#line 813 "parser/machine.c"
	switch( (*p) ) {
		case 39: goto st42;
		case 43: goto st4;
		case 45: goto tr54;
		case 46: goto st4;
		case 47: goto st5;
		case 95: goto tr54;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr46;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr54;
	} else
		goto tr54;
	goto tr84;
st42:
	if ( ++p == pe )
		goto _test_eof42;
case 42:
	switch( (*p) ) {
		case 39: goto st42;
		case 45: goto st42;
		case 95: goto st42;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st42;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st42;
	} else
		goto st42;
	goto tr86;
tr54:
#line 1 "NONE"
	{te = p+1;}
#line 74 "parser/machine.rl"
	{act = 29;}
	goto st43;
st43:
	if ( ++p == pe )
		goto _test_eof43;
case 43:
#line 856 "parser/machine.c"
	switch( (*p) ) {
		case 39: goto st42;
		case 43: goto st4;
		case 46: goto st4;
		case 47: goto st5;
		case 95: goto tr54;
	}
	if ( (*p) < 65 ) {
		if ( 45 <= (*p) && (*p) <= 57 )
			goto tr54;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr54;
	} else
		goto tr54;
	goto tr86;
tr47:
#line 1 "NONE"
	{te = p+1;}
#line 73 "parser/machine.rl"
	{act = 28;}
	goto st44;
st44:
	if ( ++p == pe )
		goto _test_eof44;
case 44:
#line 880 "parser/machine.c"
	switch( (*p) ) {
		case 39: goto st42;
		case 43: goto st4;
		case 45: goto tr54;
		case 46: goto tr81;
		case 47: goto st5;
		case 95: goto tr54;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr47;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr54;
	} else
		goto tr54;
	goto tr84;
tr49:
#line 1 "NONE"
	{te = p+1;}
	goto st45;
st45:
	if ( ++p == pe )
		goto _test_eof45;
case 45:
#line 904 "parser/machine.c"
	switch( (*p) ) {
		case 43: goto st11;
		case 61: goto tr87;
		case 95: goto st11;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st11;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st11;
		} else if ( (*p) >= 65 )
			goto st11;
	} else
		goto st11;
	goto tr66;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	switch( (*p) ) {
		case 43: goto st11;
		case 47: goto st12;
		case 62: goto tr17;
		case 95: goto st11;
	}
	if ( (*p) < 65 ) {
		if ( 45 <= (*p) && (*p) <= 57 )
			goto st11;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st11;
	} else
		goto st11;
	goto tr0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	switch( (*p) ) {
		case 43: goto st11;
		case 95: goto st11;
	}
	if ( (*p) < 48 ) {
		if ( 45 <= (*p) && (*p) <= 46 )
			goto st11;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st11;
		} else if ( (*p) >= 65 )
			goto st11;
	} else
		goto st11;
	goto tr0;
st46:
	if ( ++p == pe )
		goto _test_eof46;
case 46:
	if ( (*p) == 61 )
		goto tr88;
	goto tr66;
st47:
	if ( ++p == pe )
		goto _test_eof47;
case 47:
	if ( (*p) == 61 )
		goto tr89;
	goto tr66;
tr52:
#line 1 "NONE"
	{te = p+1;}
#line 74 "parser/machine.rl"
	{act = 29;}
	goto st48;
tr95:
#line 1 "NONE"
	{te = p+1;}
#line 53 "parser/machine.rl"
	{act = 9;}
